Create AUnit test project (#8)
* Create the AUnit Test project

* Create the Example Code project

* Add Visual Micro files to .gitignore

* Stop tracking the existing __vm folder

* Update AUnit Tests.vcxproj

* Revert the last 3 commits

* Revert "Revert the last 3 commits"

This reverts commit 16628390a3b3e7184a07429826c90b0b54950f91.

* Add gitignore exception for .vsarduino.h files

* Add boilerplate test code

* Remove Example Code project

* Remove default comments from AUnit Tests.ino

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,8 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+# Visual Micro local configuration files and directories
+*.vsarduino.h
+**/__vm/*
+!**/__vm/*.vsarduino.h
