--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelsam
 board = mkrwifi1010
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BluefruitLE nRF51@^1.10.0
+	adafruit/Adafruit NeoPixel@^1.11.0
